# ina219_magnetometer_max776743

./: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
src/: icm20948_zephyr.c  icm20948_zephyr.h  ina219.c  ina219.h  main.c  motor_period_detector.c  motor_period_detector.h  signal_reconstruction.c  signal_reconstruction.h  xyzFloat_c.c  xyzFloat_c.h
